--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     </nav>
 
     <div class="container text-center p-3 mb-2 bg-black text-white">
-        <p>Feel free to contact me at <a href = "mailto: amr.shalaby@mail.utoronto.ca?subject=GGR472 Lab 1 Website Inquiry.">amr.shalaby@mail.utoronto.ca</a>.</p>
+        <p>Feel free to contact me at <a href = "mailto: amr.shalaby@mail.utoronto.ca?subject=GGR472 Lab 1 Website Inquiry.">amr.shalaby@mail.utoronto.ca</a></p>
 
     </div>
 
