--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="container text-center p-3 mb-2 bg-black text-white">
         <!-- Heading section -->
         <div class="row">
-            <h1>Lindsey's GGR472 webpage</h1>
-            <h2>Mapping Toronto's music venues</h2>
+            <h1>Amr Shalaby's GGR472 Lab 1 Webpage</h1>
+            <h2>Mapping Gaza's Borders</h2>
         </div>
 
         <!-- Image section - Display gif stored in Data folder in row
@@ -50,7 +50,7 @@
                 Use mx-auto to centre and img-fluid to adjust sizing-->
         <div class="row">
             <div class="col-md-4 mx-auto">
-                <img src="Data/dancing.gif" class="img-fluid" alt="People dancing on a record">
+                <img src="Data/gaza_borders.webp" class="img-fluid" alt="People dancing on a record">
             </div>
         </div>
 
