--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 
         <div class="row">
             <!-- Link to internal geojson file stored in Data folder and view raw data in new window -->
-            <p>View example GeoJSON file of music venues in
-                <a target=”_blank” href="Data/torontomusicvenues.geojson">new window</a>
+            <p>
+            <p>View Gaza's Borders in GeoJSON file in
+                <a target=”_blank” href="Data/gaza.geojson">new window</a>
             </p>
 
             <!-- Link to external webpage and view in same window -->
