--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 Use mx-auto to centre and img-fluid to adjust sizing-->
         <div class="row">
             <div class="col-md-4 mx-auto">
-                <img src="Data/gaza_borders.webp" class="img-fluid" alt="Gaza's Borders Since 2005">
+                <img src="Data/gaza_borders.png" class="img-fluid" alt="Gaza's Borders Since 2005">
             </div>
         </div>
 
