--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="row">
-            <!-- Link to internal geojson file stored in Data folder and view raw data in new window -->
+            <!-- Link to internal geojson file stored in Data folder and view raw Data in new window -->
             <p>
             <p>View Gaza's Borders in GeoJSON file in
                 <a target=”_blank” href="Data/gaza.geojson">new window</a>
